--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ app/src/main/java/com/yesapp/yesapp/Create.java
 .idea/caches/build_file_checksums.ser
 .idea/workspace.xml___jb_tmp___
 *.ser
+.idea/caches/build_file_checksums.ser
+.idea/dictionaries/ibr12.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/runConfigurations.xml
+.idea/vcs.xml
